err/motmot.fview-ext-trig.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/motmot'...
Listing './lib/python3.5/site-packages/motmot/fview_ext_trig'...
Compiling './lib/python3.5/site-packages/motmot/fview_ext_trig/Alljson2hfive.py'...
***   File "./lib/python3.5/site-packages/motmot/fview_ext_trig/Alljson2hfive.py", line 23
    print 'converting %s to %s'%(filename,output_fname)
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/motmot/fview_ext_trig/easy_decode.py'...
***   File "./lib/python3.5/site-packages/motmot/fview_ext_trig/easy_decode.py", line 52
    print 'no data break'
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/motmot/fview_ext_trig/fview_ext_trig.py'...
***   File "./lib/python3.5/site-packages/motmot/fview_ext_trig/fview_ext_trig.py", line 212
    except Exception,err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/motmot/fview_ext_trig/json2hfive.py'...
***   File "./lib/python3.5/site-packages/motmot/fview_ext_trig/json2hfive.py", line 23
    print 'converting %s to %s'%(filename,output_fname)
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/motmot/fview_ext_trig/plot_h5.py'...
***   File "./lib/python3.5/site-packages/motmot/fview_ext_trig/plot_h5.py", line 44
    print 'wordstream.shape',wordstream.shape
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/motmot/fview_ext_trig/trigger.py'...
***   File "./lib/python3.5/site-packages/motmot/fview_ext_trig/trigger.py", line 48
    except RuntimeError,err:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/motmot/fview_ext_trig/ttrigger.py'...
***   File "./lib/python3.5/site-packages/motmot/fview_ext_trig/ttrigger.py", line 88
    except Exception,err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/motmot.fview_ext_trig-0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
